--- a/duburcqa/faster_launch_kernel/_modules/gstaichi/lang/kernel_impl.html
+++ b/duburcqa/faster_launch_kernel/_modules/gstaichi/lang/kernel_impl.html
@@ -325,9 +325,9 @@
 <span class="kn">import</span><span class="w"> </span><span class="nn">types</span>
 <span class="kn">import</span><span class="w"> </span><span class="nn">typing</span>
 <span class="kn">import</span><span class="w"> </span><span class="nn">warnings</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">dataclasses</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>  <span class="c1"># type: ignore[reportAttributeAccessIssue]</span>
-    <span class="n">_FIELD</span><span class="p">,</span>
-    <span class="n">_FIELDS</span><span class="p">,</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">dataclasses</span><span class="w"> </span><span class="kn">import</span> <span class="p">(</span>
+    <span class="n">_FIELD</span><span class="p">,</span>  <span class="c1"># type: ignore[reportAttributeAccessIssue]</span>
+    <span class="n">_FIELDS</span><span class="p">,</span>  <span class="c1"># type: ignore[reportAttributeAccessIssue]</span>
     <span class="n">dataclass</span><span class="p">,</span>
     <span class="n">is_dataclass</span><span class="p">,</span>
 <span class="p">)</span>
