--- a/duburcqa/cleanup/_modules/gstaichi/lang/kernel_impl.html
+++ b/duburcqa/cleanup/_modules/gstaichi/lang/kernel_impl.html
@@ -330,6 +330,8 @@
     <span class="n">dataclass</span><span class="p">,</span>
     <span class="n">is_dataclass</span><span class="p">,</span>
 <span class="p">)</span>
+
+<span class="c1"># Must import &#39;partial&#39; directly instead of the entire module to avoid attribute lookup overhead.</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">functools</span><span class="w"> </span><span class="kn">import</span> <span class="n">partial</span><span class="p">,</span> <span class="n">update_wrapper</span><span class="p">,</span> <span class="n">wraps</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Any</span><span class="p">,</span> <span class="n">Callable</span><span class="p">,</span> <span class="n">Type</span><span class="p">,</span> <span class="n">TypeVar</span><span class="p">,</span> <span class="n">cast</span><span class="p">,</span> <span class="n">overload</span>
 
@@ -1001,6 +1003,7 @@
         <span class="k">for</span> <span class="n">field</span> <span class="ow">in</span> <span class="n">needed_arg_fields</span><span class="o">.</span><span class="n">values</span><span class="p">():</span>
             <span class="k">if</span> <span class="n">field</span><span class="o">.</span><span class="n">_field_type</span> <span class="ow">is</span> <span class="ow">not</span> <span class="n">_FIELD</span><span class="p">:</span>
                 <span class="k">continue</span>
+            <span class="c1"># Storing attribute in a temporary to avoid repeated attribute lookup (~20ns penalty)</span>
             <span class="n">field_type</span> <span class="o">=</span> <span class="n">field</span><span class="o">.</span><span class="n">type</span>
             <span class="k">assert</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">field_type</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
             <span class="n">field_value</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">v</span><span class="p">,</span> <span class="n">field</span><span class="o">.</span><span class="n">name</span><span class="p">)</span>
@@ -1041,12 +1044,15 @@
             <span class="n">element_dim</span> <span class="o">=</span> <span class="n">needed_arg_dtype</span><span class="o">.</span><span class="n">ndim</span>
             <span class="n">array_shape</span> <span class="o">=</span> <span class="n">v</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="n">element_dim</span><span class="p">:]</span> <span class="k">if</span> <span class="n">is_soa</span> <span class="k">else</span> <span class="n">v</span><span class="o">.</span><span class="n">shape</span><span class="p">[:</span><span class="o">-</span><span class="n">element_dim</span><span class="p">]</span>
         <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">v</span><span class="p">,</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">):</span>
-            <span class="k">if</span> <span class="n">v</span><span class="o">.</span><span class="n">flags</span><span class="o">.</span><span class="n">f_contiguous</span><span class="p">:</span>
+            <span class="c1"># Check ndarray flags is expensive (~250ns), so it is important to order branches according to hit stats</span>
+            <span class="k">if</span> <span class="n">v</span><span class="o">.</span><span class="n">flags</span><span class="o">.</span><span class="n">c_contiguous</span><span class="p">:</span>
+                <span class="k">pass</span>
+            <span class="k">elif</span> <span class="n">v</span><span class="o">.</span><span class="n">flags</span><span class="o">.</span><span class="n">f_contiguous</span><span class="p">:</span>
                 <span class="c1"># TODO: A better way that avoids copying is saving strides info.</span>
                 <span class="n">v_contiguous</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">ascontiguousarray</span><span class="p">(</span><span class="n">v</span><span class="p">)</span>
                 <span class="n">v</span><span class="p">,</span> <span class="n">v_orig_np</span> <span class="o">=</span> <span class="n">v_contiguous</span><span class="p">,</span> <span class="n">v</span>
                 <span class="n">callbacks</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">partial</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">copyto</span><span class="p">,</span> <span class="n">v_orig_np</span><span class="p">,</span> <span class="n">v</span><span class="p">))</span>
-            <span class="k">elif</span> <span class="ow">not</span> <span class="n">v</span><span class="o">.</span><span class="n">flags</span><span class="o">.</span><span class="n">c_contiguous</span><span class="p">:</span>
+            <span class="k">else</span><span class="p">:</span>
                 <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
                     <span class="s2">&quot;Non contiguous numpy arrays are not supported, please call np.ascontiguousarray(arr) &quot;</span>
                     <span class="s2">&quot;before passing it into gstaichi kernel.&quot;</span>
