--- a/duburcqa/diagnose_cacheable_context/_modules/gstaichi/lang/kernel_impl.html
+++ b/duburcqa/diagnose_cacheable_context/_modules/gstaichi/lang/kernel_impl.html
@@ -1421,6 +1421,23 @@
         <span class="n">launch_ctx_buffer</span><span class="p">:</span> <span class="n">DefaultDict</span><span class="p">[</span><span class="n">KernelBatchedArgType</span><span class="p">,</span> <span class="nb">list</span><span class="p">[</span><span class="nb">tuple</span><span class="p">]]</span> <span class="o">=</span> <span class="n">defaultdict</span><span class="p">(</span><span class="nb">list</span><span class="p">)</span>
         <span class="n">callbacks</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">Callable</span><span class="p">[[],</span> <span class="kc">None</span><span class="p">]]</span> <span class="o">=</span> <span class="p">[]</span>
 
+        <span class="c1"># Here, we are tracking whether a launch context buffer can be cached.</span>
+        <span class="c1"># The point of caching the launch context buffer is allowing skipping recursive processing of all the input</span>
+        <span class="c1"># arguments one-by-one, which is adding a significant overhead, without changing anything in regards of the</span>
+        <span class="c1"># function calls to the launch context that must be made for a given kernel.</span>
+        <span class="c1"># You can understand this as resolving that static part of the entire control flow of &#39;_recursive_set_args&#39;</span>
+        <span class="c1"># for a given set of arguments, which is (mostly surely uniquely) characterized by its hash, gathering all</span>
+        <span class="c1"># the instructions that cannot be evaluated statically and packing them in a buffer without evaluating them at</span>
+        <span class="c1"># this point. This buffer is then cached once and for all and evaluated every time the exact same set of input</span>
+        <span class="c1"># argument is passed. This means that, ultimately, it will result in the exact same function calls with or</span>
+        <span class="c1"># without caching. In this particular case, the function calls corresponds to adding arguments to the current</span>
+        <span class="c1"># context for this kernel call.</span>
+        <span class="c1"># A launch context buffer is considered cache-friendly if and only if no direct call to the launch context</span>
+        <span class="c1"># where made preemptively during the recursive processing of the arguments, and all of leaves of the arguments</span>
+        <span class="c1"># are pointers, the address of these pointers cannot change, and the set of leaves is fixed.</span>
+        <span class="c1"># The lifetime of a cache entry is bound to the lifetime of any of its input arguments: the first being garbage</span>
+        <span class="c1"># collected will invalidate the entire entry. Moreover, the entire cache registry is bound to the lifetime of</span>
+        <span class="c1"># the taichi prog itself, which means that calling `ti.reset()` will automatically clear the cache.</span>
         <span class="n">is_launch_ctx_cacheable</span> <span class="o">=</span> <span class="kc">True</span>
         <span class="n">template_num</span> <span class="o">=</span> <span class="mi">0</span>
         <span class="n">i_out</span> <span class="o">=</span> <span class="mi">0</span>
